# CoSimulation

./: .gitignore  LICENSE  README.md
dev/Package/fmup/: LICENSE  MANIFEST.in  README.md  environment.yml  setup.cfg  setup.py
dev/Package/fmup/fmup/: __init__.py  __mainV2__.py  __main__.py  _version.py  builder.py  builderV2.py  csvbuilder.py  csvbuilderV2.py  deploy.py  deployV2.py  fmi2slave.py  fmi2slaveV2.py  variablesV2.py
dev/Package/fmup/fmup.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
dev/Package/fmup/fmup/defs/: binariesfolder.py  master.py  master_test.py  scriptfolder.py  xmlparser.py  zipfmu.py
dev/Package/fmup/fmup/fmup-export/: .clang-format  CMakeLists.txt
dev/Package/fmup/fmup/fmup-export/cpp/: PySlaveInstance.cpp  cppfmu_cs.cpp  fmi_functions.cpp  pylog.cpp
dev/Package/fmup/fmup/fmup-export/headers/cppfmu/: cppfmu_common.hpp  cppfmu_cs.hpp
dev/Package/fmup/fmup/fmup-export/headers/fmi/: fmi2FunctionTypes.h  fmi2TypesPlatform.h
dev/Package/fmup/fmup/fmup-export/headers/fmup/: PySlaveInstance.hpp  PyState.hpp
dev/Package/fmup/fmup/memory/cpp/: DependInstance.cpp  cppfmu_cs.cpp  fmi_functions.cpp  log.cpp
dev/Package/fmup/fmup/testV2/: test_builder.py  test_csvslave.py  test_deploy.py  test_fmi2slave.py  test_integration.py  test_logger.py  test_variables.py  utils.py
dev/Package/fmup/fmup/tests/: Depend_result.mat  PythonSlaveWithDep_result.mat  dependfile.py  test_builder.py  test_csvslave.py  test_deploy.py  test_fmi2slave.py  test_integration.py  test_logger.py  test_variables.py  utils.py
(+455 files in other folders)
