[metadata]
name = fmup
version = attr: fmup._version.__version__
author = iammix
home-page = https://github.com/redi-eng/cosimulation
description = Framework for packing python code to fmu
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
keywords = FMI
classifiers =
    Natural Language :: English
    Programming Language :: C++
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering
tests_require =
    pytest
    pyfmi
    fmpy

[options]
include_package_data = True
packages = find:
zip_safe = False

[options.package_data]
fmup =
    resources/*.dll
    resources/*.dylib
    resources/*.so

[options.entry_points]
console_scripts =
    fmup = fmup.__main__:cli_main

[options.extras_require]
tests =
    pytest
    pyfmi
    fmpy

[tool:pytest]
markers =
    integration: marks integration tests
